--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,10 @@ Pillow
 cython
 matplotlib
 scikit-image
-tensorflow-gpu==1.15.0
 keras==2.0.8
 opencv-python
 h5py < 3.0.0
 imgaug
 IPython[all]
+pandas
+# tensorflow-gpu==1.15.0
